--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,5 @@ html{
     padding: 20px;
     background: $lightgray;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
