--- a/src/app/modules/product/product.component.html
+++ b/src/app/modules/product/product.component.html
@@ -1,14 +1,12 @@
-<mat-card class="example-card" >
+<mat-card class="example-card" *ngFor="let product of products">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>product.name</mat-card-title>
-      <mat-card-subtitle>product.category</mat-card-subtitle>
+      <mat-card-title>{{product.name}}</mat-card-title>
+      <mat-card-subtitle>{{product.category}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="" alt="product">
+    <img mat-card-image src={{product.image}} alt="product">
     <mat-card-content>
-      <p>
-       product.description
-      </p>
+      <p>{{product.description}}      </p>
     </mat-card-content>
     <mat-card-actions fxLayoutGap="10">
         <button mat-flat-button color="primary">Show</button>
