--- a/src/app/modules/product/product.component.html
+++ b/src/app/modules/product/product.component.html
@@ -1,4 +1,5 @@
-<mat-card class="example-card" *ngFor="let product of products">
+
+<mat-card class="example-card" *ngFor="let product of page?.content">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>{{product.name}}</mat-card-title>
@@ -9,9 +10,16 @@
       <p>{{product.description}}      </p>
     </mat-card-content>
     <mat-card-actions fxLayoutGap="10">
-        <button mat-flat-button color="primary">Show</button>
+        <button mat-flat-button color="primary">View</button>
         <button mat-flat-button color="primary">Add to card</button>
     </mat-card-actions>
   </mat-card>
 
+  <mat-paginator *ngIf="page && page.totalElements > 0"
+    [length]="page.totalElements"
+     [pageSize]="10"
+     [pageSizeOptions]="[10, 25, 50, 100]"
+     aria-label="Wybierz stronę"
+     (page)="onPageEvent($event)">
+</mat-paginator>
   
