--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header fxLayoutAlign="start center">
     <div fxFlex fxLayoutAlign="start end" fxLayoutGap="15">
-        <mat-icon color="accent" class="logoIcon"></mat-icon>
+        <mat-icon color="primary" class="logoIcon"></mat-icon>
         <span class="logo">{{title}}</span>
     </div>
     <div fxLayoutGap="15" fxLayoutAlign="start center">
@@ -8,6 +8,6 @@
         <button mat-flat-button routerLink="/products">Products</button>
         <span></span>
         <button mat-flat-button routerLink="/login">Login</button>
-        <mat-icon color="accent" class="shoppingBasket">shopping_basket</mat-icon>
+        <mat-icon color="primary" class="shoppingBasket">shopping_basket</mat-icon>
     </div>
 </header>
