update, add, delete product

--- a/src/app/layouts/fullpageadmin/fullpageadmin.component.html
+++ b/src/app/layouts/fullpageadmin/fullpageadmin.component.html
@@ -8,7 +8,7 @@
         <div fxFlex class="sidebar">
               <mat-list role="list">
                 <mat-list-item><a routerLink="/admin">Link</a></mat-list-item>
-                <mat-list-item><a routerLink="/admin">Products</a></mat-list-item>
+                <mat-list-item><a routerLink="/admin/products">Products</a></mat-list-item>
                 <mat-list-item><a routerLink="/admin">Dashboard</a></mat-list-item>
               </mat-list>
         </div>
