--- a/src/app/modules/product/product.component.html
+++ b/src/app/modules/product/product.component.html
@@ -5,7 +5,7 @@
       <mat-card-title>{{product.name}}</mat-card-title>
       <mat-card-subtitle>{{product.category}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src={{product.image}} alt="product">
+    <img mat-card-image src={{product.image}} alt="product" width="150">
     <mat-card-content>
       <p>{{product.description}}      </p>
     </mat-card-content>
