--- a/src/app/modules/product/product.component.html
+++ b/src/app/modules/product/product.component.html
@@ -10,7 +10,7 @@
       <p>{{product.description}}      </p>
     </mat-card-content>
     <mat-card-actions fxLayoutGap="10">
-        <button mat-flat-button color="primary">View</button>
+        <button mat-flat-button color="primary" routerLink="{{'/products/' + product.id}}">View</button>
         <button mat-flat-button color="primary">Add to card</button>
     </mat-card-actions>
   </mat-card>
@@ -19,7 +19,7 @@
     [length]="page.totalElements"
      [pageSize]="10"
      [pageSizeOptions]="[10, 25, 50, 100]"
-     aria-label="Wybierz stronę"
+     aria-label="Choose site"
      (page)="onPageEvent($event)">
 </mat-paginator>
   
