--- a/src/app/modules/admin/admin-category/admin-category-update/admin-category-update.component.html
+++ b/src/app/modules/admin/admin-category/admin-category-update/admin-category-update.component.html
@@ -1,4 +1,4 @@
-<h1>Edycja kategorii</h1>
+<h1>Edit</h1>
 <form [formGroup]="categoryForm" (submit)="submit()">
     <app-admin-category-form [parentForm]="categoryForm" ></app-admin-category-form>
 </form>
