--- a/src/app/modules/admin/common/componnent/admin-confirm-dialog/admin-confirm-dialog.component.html
+++ b/src/app/modules/admin/common/componnent/admin-confirm-dialog/admin-confirm-dialog.component.html
@@ -6,7 +6,7 @@
         </button>
     </div>
     <div fxFlex>
-        <button mat-raised-button fxFlex [mat-dialog-close]="false">Anuluj</button>
-        <button mat-raised-button fxFlex color="warn" [mat-dialog-close]="true">Potwierdź</button>
+        <button mat-raised-button fxFlex [mat-dialog-close]="false">Cancel</button>
+        <button mat-raised-button fxFlex color="warn" [mat-dialog-close]="true">Confirm</button>
     </div>
 </div>
