--- a/src/app/modules/product/product.component.html
+++ b/src/app/modules/product/product.component.html
@@ -14,7 +14,7 @@
         <button mat-flat-button color="primary">Add to card</button>
     </mat-card-actions>
   </mat-card>
-
+<div></div>
   <mat-paginator *ngIf="page && page.totalElements > 0"
     [length]="page.totalElements"
      [pageSize]="10"
