--- a/src/app/modules/admin/admin-category/admin-category-add/admin-category-add.component.html
+++ b/src/app/modules/admin/admin-category/admin-category-add/admin-category-add.component.html
@@ -1,4 +1,4 @@
-<h1>Dodaj kategorię</h1>
+<h1>Add category</h1>
 <form fxLayout="column" [formGroup]="categoryForm" (submit)="submit()">
     <app-admin-category-form [parentForm]="categoryForm"></app-admin-category-form>
 </form>
