--- a/src/app/modules/admin/admin-category/admin-category.component.html
+++ b/src/app/modules/admin/admin-category/admin-category.component.html
@@ -1,4 +1,4 @@
-<h1>Lista kategorii <button mat-raised-button color="accent" routerLink="/admin/categories/add">Dodaj kategorię <mat-icon>add</mat-icon></button></h1>
+<h1>Category <button mat-raised-button color="primary" routerLink="/admin/categories/add">Add Category <mat-icon>add</mat-icon></button></h1>
 
 <table mat-table [dataSource]="data" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
@@ -7,12 +7,12 @@
     </ng-container>
 
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nazwa </th>
+        <th mat-header-cell *matHeaderCellDef> Name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Akcje </th>
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let element"> 
             <button mat-icon-button [routerLink]="['/admin/categories/update', element.id]">
                 <mat-icon color="primary">edit</mat-icon>
