--- a/src/app/modules/admin/admin-review/admin-review.component.html
+++ b/src/app/modules/admin/admin-review/admin-review.component.html
@@ -2,20 +2,20 @@
 
 <table mat-table [dataSource]="data">
     <ng-container matColumnDef="authorName">
-        <th mat-header-cell *matHeaderCellDef> Autor </th>
+        <th mat-header-cell *matHeaderCellDef> Author </th>
         <td mat-cell *matCellDef="let element"> {{element.authorName}} </td>
     </ng-container>
     <ng-container matColumnDef="content">
-        <th mat-header-cell *matHeaderCellDef> Treść </th>
+        <th mat-header-cell *matHeaderCellDef> Content </th>
         <td mat-cell *matCellDef="let element"> {{element.content}} </td>
     </ng-container>
     <ng-container matColumnDef="moderated">
-        <th mat-header-cell *matHeaderCellDef> Zatwierdzone </th>
+        <th mat-header-cell *matHeaderCellDef> Confirmed </th>
         <td mat-cell *matCellDef="let element"> {{element.moderated}} </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Akcje </th>
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let element">
             <button mat-icon-button (click)="confirmModerate(element)">
                 <mat-icon color="primary">done</mat-icon>
