--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,7 +1,5 @@
 <mat-selection-list [multiple]="false">
-    <mat-list *ngFor="let category of categories">
-        
-        <a routerLink="/products">{{category}}</a>
-    </mat-list>
-    
+    <mat-list-option *ngFor="let category of categories">
+        <a routerLink="{{'/categories/' + category.name}}">{{category.name}}</a>
+    </mat-list-option>
 </mat-selection-list>
