--- a/src/app/layouts/fullpageadmin/fullpageadmin.component.html
+++ b/src/app/layouts/fullpageadmin/fullpageadmin.component.html
@@ -10,6 +10,7 @@
                 <mat-list-item><a routerLink="/admin">Link</a></mat-list-item>
                 <mat-list-item><a routerLink="/admin/products">Products</a></mat-list-item>
                 <mat-list-item><a routerLink="/admin/categories">Categories</a></mat-list-item>
+                <mat-list-item><a routerLink="/admin/reviews">Reviews</a></mat-list-item>
                 <mat-list-item><a routerLink="/admin">Dashboard</a></mat-list-item>
               </mat-list>
         </div>
