--- a/src/app/modules/product-details/product-details.component.html
+++ b/src/app/modules/product-details/product-details.component.html
@@ -17,4 +17,42 @@
     <div class="description">
         {{product?.description}}
     </div>
+    <div>
+        <h2>Opinions</h2>
+        <div>
+            <div *ngFor="let review of product?.reviews" class="review">
+                <div>Autor: {{review.authorName}}</div>
+                <div>{{review.content}}</div>
+            </div>
+        </div>
+        <form [formGroup]="reviewForm" (submit)="submit()" fxLayout="column">
+            <mat-form-field appearance="fill">
+                <mat-label>Author</mat-label>
+                <input matInput placeholder="Enter name" formControlName="authorName">
+                <div *ngIf="authorName?.invalid && (authorName?.dirty || authorName?.touched)" class="errorMessage">
+                    <div *ngIf="authorName?.errors?.['required']">
+                        Name is required
+                    </div>
+                    <div *ngIf="authorName?.errors?.['minlength']">
+                        The name must be at least 2 characters long
+                    </div>
+                </div>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+                <mat-label>Your opinion</mat-label>
+                <textarea matInput rows="10" placeholder="Enter opinion" formControlName="content"></textarea>
+                <div *ngIf="content?.invalid && (content?.dirty || content?.touched)" class="errorMessage">
+                    <div *ngIf="content?.errors?.['required']">
+                        Opinion is required
+                    </div>
+                    <div *ngIf="content?.errors?.['minlength']">
+                        The opinion must be at least 4 characters long
+                    </div>
+                </div>
+            </mat-form-field>
+            <div fxLayout="colum" fxFlexAlign="end" fxLayoutGap="10">
+                <button mat-flat-button color="primary" [disabled]="!reviewForm.valid">Save</button>
+            </div>
+        </form>
+    </div>
 </div>
