--- a/src/app/modules/product-details/product-details.component.html
+++ b/src/app/modules/product-details/product-details.component.html
@@ -10,7 +10,7 @@
             <div fxLayout="row" fxFlexAlign="end">
                 <span class="price">{{product?.price}} {{product?.currency}}</span>
             </div>
-            <button mat-flat-button color="warn" routerLink="/cart" [queryParams]="{productId: product?.id}">Add to cart</button>
+            <button mat-flat-button color="primary" routerLink="/cart" [queryParams]="{productId: product?.id}">Add to cart</button>
             
         </div>
     </div>
