--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,6 +8,6 @@
         <button mat-flat-button routerLink="/products">Products</button>
         <span></span>
         <button mat-flat-button routerLink="/login">Login</button>
-        <mat-icon color="primary" class="shoppingBasket">shopping_basket</mat-icon>
+        <a routerLink="/cart"><mat-icon color="primary" class="shoppingBasket" matBadge="{{cartProductCounter}}" matBadgeColor="warn">shopping_basket</mat-icon></a>
     </div>
 </header>
