--- a/src/app/modules/product/product.component.html
+++ b/src/app/modules/product/product.component.html
@@ -11,7 +11,7 @@
     </mat-card-content>
     <mat-card-actions fxLayoutGap="10">
         <button mat-flat-button color="primary" routerLink="{{'/products/' + product.id}}">View</button>
-        <button mat-flat-button color="primary">Add to card</button>
+        <button mat-flat-button color="primary" routerLink="/cart" [queryParams]="{productId: product?.id}">Add to cart</button>
     </mat-card-actions>
   </mat-card>
 <div></div>
