--- a/src/app/layouts/default/default.component.html
+++ b/src/app/layouts/default/default.component.html
@@ -7,4 +7,4 @@
         <router-outlet></router-outlet>
     </div>
 </div>
-<app-footer flexLayout="column"></app-footer>
+<!-- <app-footer flexLayout="column"></app-footer> -->
