--- a/src/app/layouts/fullpageadmin/fullpageadmin.component.html
+++ b/src/app/layouts/fullpageadmin/fullpageadmin.component.html
@@ -7,11 +7,18 @@
     <div>
         <div fxFlex class="sidebar">
               <mat-list role="list">
+                <!-- <mat-list-option>
+                    <a routerLink="/admin/orders">Orders</a>
+                    <span class="subMenuLink"> | <a routerLink="/admin/orders/export">Export</a></span>
+                    <span class="subMenuLink"> | <a routerLink="/admin/orders/stats">Stats</a></span>
+                </mat-list-option> -->
                 <mat-list-item><a routerLink="/admin">Link</a></mat-list-item>
                 <mat-list-item><a routerLink="/admin/products">Products</a></mat-list-item>
                 <mat-list-item><a routerLink="/admin/categories">Categories</a></mat-list-item>
                 <mat-list-item><a routerLink="/admin/reviews">Reviews</a></mat-list-item>
-                <mat-list-item><a routerLink="/admin">Dashboard</a></mat-list-item>
+                <mat-list-item><a routerLink="/admin/orders">Orders</a></mat-list-item>
+                <mat-list-item><a routerLink="/admin/orders/export">Export</a></mat-list-item>
+                <mat-list-item><a routerLink="/admin/orders/stats">Stats</a></mat-list-item>
               </mat-list>
         </div>
     </div>
