--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,39 +1,1 @@
-<div fxLayout="row">
-    <div fxFlex>
-        <h2>Logowanie</h2>
-        <form [formGroup]="loginForm" fxLayout="column" (submit)="login()" class="loginForm">
-            <div *ngIf="loginError" class="error">Enter login and password</div>
-            <mat-form-field appearance="fill">
-                <mat-label>Email</mat-label>
-                <input matInput formControlName="username" placeholder="Enter email">
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-                <mat-label>Password</mat-label>
-                <input type="password" matInput formControlName="password">
-            </mat-form-field>
-            <button mat-flat-button color="primary">Sign in</button>
-            <div class="lostPassword">
-                <a routerLink="/lostPassword">Have you forgotten your password?</a>
-            </div>
-        </form>
-    </div>
-    <div fxFlex>
-        <h2>Registration</h2>
-        <form [formGroup]="registerForm" fxLayout="column" (submit)="register()" class="registerForm">
-            <div *ngIf="registerError" class="error">{{registerErrorMessage}}</div>
-            <mat-form-field appearance="fill">
-                <mat-label>Email</mat-label>
-                <input matInput formControlName="username" placeholder="Enter email">
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-                <mat-label>Password</mat-label>
-                <input type="password" matInput formControlName="password">
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-                <mat-label>Repeat password</mat-label>
-                <input type="password" matInput formControlName="repeatPassword" placeholder="Repeat password">
-            </mat-form-field>
-            <button mat-flat-button color="primary">Rejestruj</button>
-        </form>
-    </div>
-</div>
+<p>login works!</p>
