--- a/src/app/modules/admin/admin-order/admin-order-export/admin-order-export.component.html
+++ b/src/app/modules/admin/admin-order/admin-order-export/admin-order-export.component.html
@@ -20,5 +20,5 @@
             <mat-option *ngFor="let status of statuses | keyvalue" [value]="status.key">{{status.value}}</mat-option>
         </mat-select>
       </mat-form-field>
-    <button mat-flat-button color="primary">Export to PDF</button>
+    <button mat-flat-button color="primary">Export to CSV</button>
 </form>
